--- a/alum2.css
+++ b/alum2.css
@@ -78,6 +78,12 @@ body{
 	width: 200px;
 	border: none;
 }
+@media only screen and (max-width: 320px){
+	.regloginbox input[type=submit]{
+		width: 100%;
+	}
+}
+
 
 
 
