--- a/alum2.css
+++ b/alum2.css
@@ -197,7 +197,9 @@ body{
 		margin: 0px;
 	}
 }
-.regbox input[type=text], .regbox input[type=password]{	
+.regbox input[type=text], .regbox input[type=password]{
+	text-align: left;
+	padding: 10px;	
 	width: 70%;
 	margin-bottom: 20px;
 	border: 1px solid;
