--- a/alum.css
+++ b/alum.css
@@ -137,14 +137,14 @@ body{
 	}
 }
 
-.regbox input[type=text], .regbox input[type=password], .regbox input[type=submit]{
+.regbox input[type=text], .regbox input[type=number], .regbox input[type=email], .regbox input[type=password], .regbox input[type=submit]{
 	height: 50px;
 	font-size: 20px;
 	border-radius: 10px;
 
 }
 @media only screen and (max-width:559px){
-	.regbox input[type=text], .regbox input[type=password], .regbox input[type=submit]{
+	.regbox input[type=text], .regbox input[type=number], .regbox input[type=email], .regbox input[type=password], .regbox input[type=submit]{
 		height: 30px;
 		font-size: 15px;
 		border-radius: 8px;
@@ -178,7 +178,7 @@ body{
 }
 .regbox label{
 	text-align: left;
-	font-size: 20px;
+	font-size: 18px;
 	width: 30%;
 	padding: 12px;
 	margin: auto;
@@ -197,7 +197,7 @@ body{
 		margin: 0px;
 	}
 }
-.regbox input[type=text], .regbox input[type=password]{
+.regbox input[type=text], .regbox input[type=number], .regbox input[type=email], .regbox input[type=password]{
 	text-align: left;
 	padding: 10px;	
 	width: 70%;
@@ -206,7 +206,7 @@ body{
 	margin: auto;
 }
 @media only screen and (max-width: 435px){
-	.regbox input[type=text], .regbox input[type=password]{	
+	.regbox input[type=text], .regbox input[type=number], .regbox input[type=email], .regbox input[type=password]{	
 		width: 100%;
 	}
 	.reglog-cin-form{
