--- a/alum2.css
+++ b/alum2.css
@@ -313,6 +313,7 @@ body{
 /*HOME.HTML-----------------------------------------------------------------------------------------------------*/
 
 
+/* DEFAULTS */
 
 div.topbar, div.masthd, div.banner, div.auxmenu, div.content, div.agenft, div.stdft{
 	width: 100%;
@@ -320,6 +321,11 @@ div.topbar, div.masthd, div.banner, div.auxmenu, div.content, div.agenft, div.st
 div.topbar, div.auxmenu{
 	background-color: grey;
 	height: 45px;
+}
+.topbar input[type=submit]{
+	height: 50px;
+	font-size: 20px;
+	border-radius: 10px;
 }
 
 div.masthd{
@@ -343,3 +349,7 @@ div.stdft{
 	height:20%;
 	background-color: gray;
 }
+
+/*TOPBAR*/
+
+
