--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 * {
 	font-family: sans-serif;
 	box-sizing: border-box;
@@ -8,7 +7,7 @@ html{
 	min-width: 180px;
 }
 body{
-	background-color: whitesmoke;
+	background-color: white;
 	margin: auto;
 	font-size: 20px;
 }
@@ -24,20 +23,50 @@ body{
 	}
 }
 
-
-/*HOME.HTML-----------------------------------------------------------------------------------------------------*/
-
-
-/* DEFAULTS */
-
 div.topbar, div.masthd, div.banner, div.auxmenu, div.content, div.agenft, div.stdft{
 	width: 100%;
 }
-div.topbar{
-	/* background-color: grey; */
+
+div.index-topbar{
+	background-color: whitesmoke;
     display: flex;
+    /* font-size: 25px; */
 }
+div.index-masthd{
+    height: auto;
+	background-color: white;
+}
+div.banner{
+	height: 460px;
+	background-color: lightgray;
+}
+
+div.auxmenu{
+	display: none;
+}
+div.content{
+	height: 50%;
+	background-color: whitesmoke;
+}
+div.agenft{
+	height: 30%;
+	background-color: darkgray;
+}
+div.stdft{
+	height:20%;
+	background-color: gray;
+}
+
+
 /*TOPBAR-------------------------------------------------------------*/
+.index-tb-logo{
+    width: 200px;
+}
+.index-tb-logo img{
+    width: 100px;
+    height: 100px;
+    padding: 10px 10px;
+}
 .tb-icon {
 	padding: 12px 20px;
 	display:none;
@@ -94,7 +123,7 @@ div.topbar{
 	}
 } */
 .tb-menu-opt, .tb-pf-opt, .popup-tb-menu-opt{
-    padding: 20px 35px;
+    padding: 40px 40px;
 }
 .tb-menu a:link, .tb-menu a:visited{
 	background-color: whitesmoke;
@@ -175,36 +204,15 @@ div.topbar{
     text-align: center;
 }
 
-/* div.topbar, div.auxmenu{
-	background-color: grey; */
-	/* min-height: 50px; */
-    /* display: flex;
-} */
 
-/* .topbar input[type=submit]{
-	font-size: 20px;
-	border-radius: 10px;
-    display: none;
-} */
+/*MASTHEAD-----------------------------------------------------------------------------*/
 
-
-
-div.masthd{
-	background-color: darkgrey;
-	height: 140px;
+.mast-aclc-img{
+    height: auto;
 }
-div.banner{
-	height: 460px;
-	background-color: lightgray;
-}
-div.auxmenu{
-	display: none;
-}
+
 /*CONTENT AREA------------------------------------------------------------------------------*/
-div.content{
-	height: 50%;
-	background-color: whitesmoke;
-}
+
 .cont-home h1{
     display: block;
 	text-align: left;
@@ -215,15 +223,8 @@ div.content{
 .cont-prof{
     display: none;
 }
-div.agenft{
-	height: 30%;
-	background-color: darkgray;
-}
-div.stdft{
-	height:20%;
-	background-color: gray;
-}
 
-/*TOPBAR*/
+
+
 
 
