--- a/index.css
+++ b/index.css
@@ -23,12 +23,12 @@ body{
 	}
 }
 
-div.topbar, div.masthd, div.banner, div.auxmenu, div.content, div.agenft, div.stdft{
+div.index-topbar, div.index-masthd, div.banner, div.auxmenu, div.content, div.index-agenft, div.stdft{
 	width: 100%;
 }
 
 div.index-topbar{
-	background-color: whitesmoke;
+	background-color: rgb(1, 3, 126);
     display: flex;
     /* font-size: 25px; */
 }
@@ -44,12 +44,14 @@ div.banner{
 div.auxmenu{
 	display: none;
 }
-div.content{
-	height: 50%;
+div.index-content{
+	height: 30%;
 	background-color: whitesmoke;
 }
-div.agenft{
-	height: 30%;
+div.index-agenft{
+	display: flex;
+	padding-top: 100px;
+	padding-bottom: 50px;
 	background-color: darkgray;
 }
 div.stdft{
@@ -126,17 +128,17 @@ div.stdft{
     padding: 40px 40px;
 }
 .tb-menu a:link, .tb-menu a:visited{
+	background-color: rgb(1, 3, 126);
+	color: white;
+	text-decoration: none;
+}
+.tb-menu a:hover{
 	background-color: whitesmoke;
 	color: black;
 	text-decoration: none;
 }
-.tb-menu a:hover{
-	background-color: lightgray;
-	color: black;
-	text-decoration: none;
-}
 .tb-menu a:active{
-	background-color: gray;
+	background-color: rgb(189, 4, 4);
 	color: white;
 	text-decoration: none;
 }
@@ -224,7 +226,22 @@ div.stdft{
     display: none;
 }
 
+/*AGENCY FOOTER--------------------------------------------------------------------------------------*/
 
-
+.index-af-left-blk, .index-af-mid-blk, .index-af-right-blk{
+	display: block;
+}
+.index-af-left-blk{
+	width: 33%;
+}
+.index-af-mid-blk{
+	width: 34%;
+}
+.index-af-right-blk{
+	width: 33%;
+}
+.index-af-lb-img img{
+	width: 100%;
+}
 
 
